packages/shared/src/components/utilities.module.css
.legal {
  & a {
    display: inline-block;
    text-decoration: underline;
    color: inherit;
    @supports (display: contents) {
      display: contents;
    }
  }
}

.pageContainer {
  max-width: $pageMaxWidth;
  margin: auto;

  @screen laptop {
    width: $pageMaxWidth;
    margin-left: calc(50% - (($pageMaxWidth / 2) - 3rem));
  }

  @screen laptopL {
    width: $pageMaxWidth;
    margin: auto;
  }

  &:global(.modal-post) {
    margin: unset;
  }
}

.feedPage {
  &.notReady {
    & > * {
      visibility: hidden;
    }
  }
}

.fixedPostsNavigation {
  max-width: 100vw;

  @screen laptop {
    max-width: 63.65rem;
  }
}

.activeTabIndicator {
  border-radius: 0.063rem;
}

.pageWidgets {
  @screen laptop {
    width: 23rem;
    max-width: 23rem;
  }
}

